--- a/app1/app.yaml
+++ b/app1/app.yaml
@@ -3,23 +3,23 @@ kind: Deployment
 metadata:
   name: hello
 spec:
+  minReadySeconds: 10
   replicas: 10
   selector:
     matchLabels:
       app: hello
-  minReadySeconds: 10
   strategy:
-    type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 1
       maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: hello
     spec:
       containers:
-        - name: hello-pod
-          image: wdalmut/app1
-          ports:
-            - containerPort: 3000
+      - image: wdalmut/app1:15
+        name: hello-pod
+        ports:
+        - containerPort: 3000
