--- a/app1/service.yaml
+++ b/app1/service.yaml
@@ -2,13 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-svc
+  namespace: quality
   labels:
     app: hello
 spec:
   type: NodePort
   ports:
-    - port: 80
-      nodePort: 30001
+    - port: 3000
+      nodePort: 31001
       protocol: TCP
   selector:
     app: hello
